# BlinkyOTA

Samples/OTA-Blinky/: README.md
Samples/OTA-Blinky/Blinky2/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  main.c
Samples/OTA-Blinky/Blinky3/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  main.c
